--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -27,18 +27,18 @@ jobs:
       - name: execute py script # run main.py
         env:
           SERVICE_ACCOUNT_FILE: ${{ secrets.SERVICE_ACCOUNT_FILE }}
-        run: python scrap_halo_doc.py
+        run: python getdataobat.py
 
       - name: commit files
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A
-          git diff-index --quiet HEAD || (git commit -a -m "updated logs" --allow-empty)
+          git diff-index --quiet HEAD || (git commit -a -m "updated obat" --allow-empty)
           
       - name: push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: auto_update_ga
+          branch: auto_update_obat
           
