--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,36 @@
+attrs==23.1.0
 cachetools==5.3.2
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.3.2
+exceptiongroup==1.1.3
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 gspread==5.12.0
+h11==0.14.0
 idna==3.4
 numpy==1.26.2
 oauthlib==3.2.2
+outcome==1.3.0.post0
+packaging==23.2
 pandas==2.1.3
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycparser==2.21
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+selenium==4.15.2
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+trio==0.23.1
+trio-websocket==0.11.1
 tzdata==2023.3
 urllib3==2.0.7
+webdriver-manager==4.0.1
+wsproto==1.2.0
